--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
 <body>
     <section class="header">
         <nav>
-            <a href="Index.html"><img src="Images/logo_transparent_130x130.png"></a>
+            <a href="index.html"><img src="Images/logo_transparent_130x130.png"></a>
             <div class="nav-links" id="navLinks">
                 <i class="fa fa-times" onclick="hideMenu()"></i>
                 <ul>
-                    <li><a href="Index.html">ACCEUIL</a></li>
+                    <li><a href="index.html">ACCEUIL</a></li>
                     <li><a href="about.html">A PROPOS</a></li>
                     <li><a href="prestation.html">PRESTATIONS</a></li>
                     <li><a href="contact.html">CONTACT</a></li>
